fix loader z-index

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 @keyframes hideit {
   100% {
     opacity: 0;
+    z-index: -20;
   }
 }
 
